styling progress checkpoint

--- a/clients/mobileui/index.html
+++ b/clients/mobileui/index.html
@@ -518,7 +518,7 @@
           </div>
       </a>
 
-      <!-- Group messaging human message -->
+      <!-- Private messaging human message -->
       <div data-classimpl="privateMessage" class="privateMessage hbox">
         <div class="leftPad"></div>
         <div class="boxFlex">
