styling: more example text
provide a consistent stretch of back-and-forth by other participants

--- a/clients/mobileui/styling.html
+++ b/clients/mobileui/styling.html
@@ -671,6 +671,13 @@
           {t: "msg", s: "Dave", d: "10:09a", m: "Charlie, we need you to break us out of prison."},
           {t: "msg", s: "Charlie", d: "4:10p", m: "The first step is to break down the walls by being completely honest."},
           {t: "msg", s: "Alice", d: "4:14p", m: "Not the metaphorical one."},
+          {t: "msg", s: "Charlie", d: "4:16p", m: "Then the first step is to break down the physical walls with some form of explosive."},
+          {t: "msg", s: "Alice", d: "4:14p", m: "They took away all of our fireworks."},
+          {t: "msg", s: "Charlie", d: "4:19p", m: "Powertools?"},
+          {t: "msg", s: "Charlie", d: "4:19p", m: "Silverware?"},
+          {t: "msg", s: "Alice", d: "4:19p", m: "Taken."},
+          {t: "msg", s: "Alice", d: "4:20p", m: "Replaced with plastic sporks."},
+          {t: "msg", s: "Charlie", d: "4:23p", m: "Gimme a minute."},
 
           {t: "era", rt: "3 weeks ago", dt: "(1 day later)", at: "Saturday, June 4th"},
           {t: "msg", s: "Alice", d: "6:43a", m: "HEY! BREAK US OUT OF PRISON!"},
