styling: group conversation display participant list

--- a/clients/mobileui/styling.html
+++ b/clients/mobileui/styling.html
@@ -638,13 +638,13 @@
     <!-- non-scrolling reminder of the participants... -->
     <div class="gcd-header">
       <div class="gcd-participants" data-childclass="participant">
-        <span class="gcd-participant">Alice</span>
-        <span class="gcd-participant">Bob</span>
-        <span class="gcd-participant">Charlie</span>
-        <span class="gcd-participant">Zorro</span>
-        <span class="gcd-participant">Zorro, Jr.</span>
+        <span class="gcd-participant"><img class="gcd-part-pic PIC-alice" />Alice</span>
+        <span class="gcd-participant"><img class="gcd-part-pic PIC-bob" />Bob</span>
+        <span class="gcd-participant"><img class="gcd-part-pic PIC-charlie" />Charlie</span>
+        <span class="gcd-participant"><img class="gcd-part-pic PIC-zorro" />Zorro</span>
+        <span class="gcd-participant"><img class="gcd-part-pic PIC-zorrojr" />Zorro, Jr.</span>
       </div>
-      <button class="add">Add</button>
+      <button class="gcd-add">Add</button>
     </div>
     <!-- scrolling messages -->
     <div class="scroller">
