add server icons for the server picker

--- a/clients/mobileui/styling.html
+++ b/clients/mobileui/styling.html
@@ -110,42 +110,42 @@
     <div class="scroller" data-childclass="serverLink">
       <a data-classimpl="serverLink" class="ps-server"
          href="#connectToServer">
-        <span class="ps-serverUrl">us.raindrop.it</span>
+        <span class="ps-serverUrl"><img class="ps-serverIcon" src="../../styling/server-icons/raindrop-us.png" />us.raindrop.it</span>
         <span class="ps-serverName">Raindrop US Server</span>
       </a>
       <a data-classimpl="serverLink" class="ps-server"
          href="#connectToServer">
-        <span class="ps-serverUrl">de.raindrop.it</span>
+        <span class="ps-serverUrl"><img class="ps-serverIcon" src="../../styling/server-icons/raindrop-de.png" />de.raindrop.it</span>
         <span class="ps-serverName">Raindrop German Server</span>
       </a>
       <a data-classimpl="serverLink" class="ps-server"
          href="#connectToServer">
-        <span class="ps-serverUrl">gd.example.com</span>
+        <span class="ps-serverUrl"><img class="ps-serverIcon" src="../../styling/server-icons/missing.png" />gd.example.com</span>
         <span class="ps-serverName">Global Dynamics</span>
       </a>
       <a data-classimpl="serverLink" class="ps-server"
          href="#connectToServer">
-        <span class="ps-serverUrl">md.example.com</span>
+        <span class="ps-serverUrl"><img class="ps-serverIcon" src="../../styling/server-icons/missing.png" />md.example.com</span>
         <span class="ps-serverName">Massive Dynamic</span>
       </a>
       <a data-classimpl="serverLink" class="ps-server"
          href="#connectToServer">
-        <span class="ps-serverUrl">hipsters.example.com</span>
+        <span class="ps-serverUrl"><img class="ps-serverIcon" src="../../styling/server-icons/missing.png" />hipsters.example.com</span>
         <span class="ps-serverName">4 Hipsters Only!!!</span>
       </a>
       <a data-classimpl="serverLink" class="ps-server"
          href="#connectToServer">
-        <span class="ps-serverUrl">friendly.example.com</span>
+        <span class="ps-serverUrl"><img class="ps-serverIcon" src="../../styling/server-icons/missing.png" />friendly.example.com</span>
         <span class="ps-serverName">Friendly Mail Company's Friendly Mail Server that wants to be your friend, yes we do.  Do you not believe it?  You should!</span>
       </a>
       <a data-classimpl="serverLink" class="ps-server"
          href="#connectToServer">
-        <span class="ps-serverUrl">nefarious1.example.com</span>
+        <span class="ps-serverUrl"><img class="ps-serverIcon" src="../../styling/server-icons/missing.png" />nefarious1.example.com</span>
         <span class="ps-serverName">Fraudulent Raindrop US Server (us.raindrop.it) ____________________________________________________ Someotheryestotally for sure</span>
       </a>
       <a data-classimpl="serverLink" class="ps-server"
          href="#connectToServer">
-        <span class="ps-serverUrl">us.raindrop.it.ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss.example.com</span>
+        <span class="ps-serverUrl"><img class="ps-serverIcon" src="../../styling/server-icons/missing.png" />us.raindrop.it.ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss.example.com</span>
         <span class="ps-serverName">Nefarious Server</span>
       </a>
     </div>
