--- a/clients/mobileui/styling.html
+++ b/clients/mobileui/styling.html
@@ -1006,6 +1006,51 @@
   <!-- Add: List the server phonebooks to pick someone to connect to.  -->
   <div data-cardid="add" title="Add a contact" class="card pbl-card">
     <div class="scroller" data-childclass="peepPhonebook">
+      <!-- Phonebook Entry -->
+      <a class="pbl-item" data-classimpl="peepPhonebook"
+         href="#askFriend">
+        <div class="pbl-avatar">
+          <img class="pbl-pic PIC-eliza" />
+        </div>
+        <div class="pbl-info">
+          <div>
+            <span class="pbl-peepName">Eliza Dolittle</span>
+          </div>
+          <div>
+            using server <span class="pbl-serverUrl">pygmael.example.com</span>
+          </div>
+        </div>
+      </a>
+      <!-- Phonebook Entry -->
+      <a class="pbl-item" data-classimpl="peepPhonebook"
+         href="#askFriend">
+        <div class="pbl-avatar">
+          <img class="pbl-pic PIC-hieronymus" />
+        </div>
+        <div class="pbl-info">
+          <div>
+            <span class="pbl-peepName">Hieronymus Q. Hierarchicalnamespace, MD, Ph.D, Sc.D, DJ, MC, RAID-10, Fanta Drinker</span>
+          </div>
+          <div>
+            using server <span class="pbl-serverUrl">hier.arch.y.yeah.yeah.yeah.yeah.yeah.yeah.yeah.yeah.yeah.yeah.yeah.example.com</span>
+          </div>
+        </div>
+      </a>
+      <!-- Phonebook Entry -->
+      <a class="pbl-item" data-classimpl="peepPhonebook"
+         href="#askFriend">
+        <div class="pbl-avatar">
+          <img class="pbl-pic PIC-zorro" />
+        </div>
+        <div class="pbl-info">
+          <div>
+            <span class="pbl-peepName">Zorro Z. Zorrington</span>
+          </div>
+          <div>
+            using server <span class="pbl-serverUrl">masked.example.com</span>
+          </div>
+        </div>
+      </a>
     </div>
   </div>
 
@@ -1085,11 +1130,11 @@
         <div>
           I call this person: <input class="pbl-name" type="text" name="displayName">
         </div>
-        <div class="pbl-sendMessageBox">
-          <div class="pbl-sendMessagePrompt">
+        <div class="pba-sendMessageBox">
+          <div class="pba-sendMessagePrompt">
             Message to send with this request:
           </div>
-          <textarea class="pbl-sendMessageText" name="message"></textarea>
+          <textarea class="pba-sendMessageText" name="message"></textarea>
         </div>
         <button>Send connect request</button>
       </form>
@@ -1132,7 +1177,7 @@
               <span class="crl-peepName">Hieronymus Q. Hierarchicalnamespace, MD, Ph.D, Sc.D, DJ, MC, RAID-10, Fanta Drinker</span>
             </div>
             <div>
-              using server <span class="crl-serverUrl">hier.example.com</span>
+              using server <span class="crl-serverUrl">hier.arch.y.yeah.yeah.yeah.yeah.yeah.yeah.yeah.yeah.yeah.yeah.yeah.example.com</span>
             </div>
           </div>
         </div>
