--- a/clients/mobileui/styling.html
+++ b/clients/mobileui/styling.html
@@ -49,6 +49,7 @@
           PIC_BOB = 'http://www.gravatar.com/avatar/e1e4d264eb2c6d25393e309030594572?r=pg&d=wavatar&s=48',
           PIC_CHARLIE = 'http://www.gravatar.com/avatar/810c1dfbca3bd1224eab9871ba47cd41?r=pg&d=wavatar&s=48',
           PIC_DAVE = 'http://www.gravatar.com/avatar/5164a5db191edd7bbf5cd87a78829e85?r=pg&d=wavatar&s=48',
+          PIC_DOUG = 'http://www.gravatar.com/avatar/a0e13579dbd9bb7ccba990f739f368ee?r=pg&d=wavatar&s=48',
           PIC_ELIZA = 'http://www.gravatar.com/avatar/64d725a972cfd6d76850eae8157b03f4?r=pg&d=wavatar&s=48',
           PIC_FRED = 'http://www.gravatar.com/avatar/75d891bda3b9fcea07c5d98b75b60ca2?r=pg&d=wavatar&s=48',
           PIC_GEORGETTE = 'http://www.gravatar.com/avatar/c576efa922215cd13bd1a7a8d8b6e3e3?r=pg&d=wavatar&s=48',
@@ -62,27 +63,28 @@
         // - card stuff
         // wrap every card with a stylingCardWrapper so they each look like
         //  little screenshots.
-        $('.card')
-          .wrap($('#stylingCardTemplate').clone(true).removeAttr('id'));
-        $('.stylingCardWrapper')
+        $(".card")
+          .wrap($("#stylingCardTemplate").clone(true).removeAttr("id"));
+        $(".stylingCardWrapper")
           .each(function() {
-            var title = $(this).find('[title]').attr('title');
-            $(this).find('.THEheaderText').text(title);
+            var title = $(this).find("[title]").attr("title");
+            $(this).find(".THEheaderText").text(title);
           });
 
         // Replace the image sources for .PIC-blah with the appropriate URls
-        $('.PIC-alice').attr('src', PIC_ALICE);
-        $('.PIC-bob').attr('src', PIC_BOB);
-        $('.PIC-charlie').attr('src', PIC_CHARLIE);
-        $('.PIC-me').attr('src', PIC_DAVE);
-        $('.PIC-you').attr('src', PIC_DAVE);
-        $('.PIC-eliza').attr('src', PIC_ELIZA);
-        $('.PIC-fred').attr('src', PIC_FRED);
-        $('.PIC-georgette').attr('src', PIC_GEORGETTE);
-        $('.PIC-hieronymus').attr('src', PIC_HIERONYMUS);
-        $('.PIC-john').attr('src', PIC_JOHN);
-        $('.PIC-zorro').attr('src', PIC_ZORRO);
-        $('.PIC-zorrojr').attr('src', PIC_ZORRO_JR);
+        $(".PIC-alice").attr("src", PIC_ALICE);
+        $(".PIC-bob").attr("src", PIC_BOB);
+        $(".PIC-charlie").attr("src", PIC_CHARLIE);
+        $(".PIC-me").attr("src", PIC_DAVE);
+        $(".PIC-you").attr("src", PIC_DAVE);
+        $(".PIC-doug").attr("src", PIC_DOUG);
+        $(".PIC-eliza").attr("src", PIC_ELIZA);
+        $(".PIC-fred").attr("src", PIC_FRED);
+        $(".PIC-georgette").attr("src", PIC_GEORGETTE);
+        $(".PIC-hieronymus").attr("src", PIC_HIERONYMUS);
+        $(".PIC-john").attr("src", PIC_JOHN);
+        $(".PIC-zorro").attr("src", PIC_ZORRO);
+        $(".PIC-zorrojr").attr("src", PIC_ZORRO_JR);
       });
     //]]>
     </script>
@@ -344,21 +346,18 @@
   </div>
 
   <!-- private: Lists of peeps with most recent private conv msg snip -->
-  <div data-cardid="private" title="Private" class="card card-private">
+  <div data-cardid="private" title="Private" class="card pcl-card">
     <div class="scroller" data-childclass="peepPrivate">
       <!-- Alice -->
-      <a class="pcl-perPeepItem" href="#privateConv"
+      <a class="pcl-item" href="#privateConv"
          hasUnread="true">
-        <div>
-          <div class="pcl-avatar">
-            <img class="pcl-pic PIC-alice" src="i/face2.png" />
-          </div>
+        <div class="pcl-avatar">
+          <img class="pcl-pic PIC-alice" src="i/face2.png" />
         </div>
         <div class="pcl-msgPreview">
           <div class="pcl-msgPreviewHeader">
             <span class="pcl-author">Alice</span>
             <span class="pcl-new">(<span>2</span>)</span>
-            <span class="boxFlexStrong"></span>
             <span class="pcl-time" data-bind="conv.mostRecentActivity">
               10 minutes ago
             </span>
@@ -372,18 +371,15 @@
         </div>
       </a>
       <!-- Bob -->
-      <a class="pcl-perPeepItem" href="#privateConv"
+      <a class="pcl-item" href="#privateConv"
          hasUnread="false">
-        <div>
-          <div class="pcl-avatar">
-            <img class="pcl-pic PIC-bob" src="i/face2.png" />
-          </div>
+        <div class="pcl-avatar">
+          <img class="pcl-pic PIC-bob" src="i/face2.png" />
         </div>
         <div class="pcl-msgPreview">
           <div class="pcl-msgPreviewHeader">
             <span class="pcl-author">Bob</span>
             <span class="pcl-new">(<span>0</span>)</span>
-            <span class="boxFlexStrong"></span>
             <span class="pcl-time" data-bind="conv.mostRecentActivity">
               1 day ago
             </span>
@@ -399,18 +395,15 @@
         </div>
       </a>
       <!-- Charlie -->
-      <a class="pcl-perPeepItem" href="#privateConv"
+      <a class="pcl-item" href="#privateConv"
          hasUnread="true">
-        <div>
-          <div class="pcl-avatar">
-            <img class="pcl-pic PIC-charlie" src="i/face2.png" />
-          </div>
+        <div class="pcl-avatar">
+          <img class="pcl-pic PIC-charlie" src="i/face2.png" />
         </div>
         <div class="pcl-msgPreview">
           <div class="pcl-msgPreviewHeader">
             <span class="pcl-author">Charlie</span>
             <span class="pcl-new">(<span>2</span>)</span>
-            <span class="boxFlexStrong"></span>
             <span class="pcl-time" data-bind="conv.mostRecentActivity">
               3 days ago
             </span>
@@ -428,7 +421,7 @@
   </div>
 
   <!-- privateConv: Private conversation with a friend peep. -->
-  <div data-cardid="privateConv" title="Private Conv" class="card pcd-card">
+  <div data-cardid="privateConv" title="Private Conv: Bob" class="card pcd-card">
     <!-- non-scrolling reminder of who our friend is... -->
     <div class="pcd-header">
       <div class="pcd-headerThem">
@@ -550,104 +543,110 @@
     </div>
     <div class="scroller" data-childclass="convBlurb">
       <!-- Conversation with new activity, reasonable first snippet  -->
-      <a class="gcl-conv" data-classimpl="convBlurb"
-         href="#groupConv">
-          <div>
-              <div class="gcl-avatar">
-                  <img class="gcl-pic" src="i/group.png" />
-              </div>
+      <a class="gcl-item" data-classimpl="convBlurb"
+         href="#groupConv" hasUnread="true">
+        <div class="gcl-header">
+          <div class="gcl-headerRight">
+            <span class="gcl-new">
+              (<span data-bind="gcl-numUnreadMessages">2</span>)
+            </span>
+            <span class="gcl-time">12 minutes ago</span>
           </div>
-          <div class="gcl-msgPreview">
-              <div class="gcl-msgPreviewHeader">
-                  <!-- names -->
-                  <span class="gcl-namechecks"
-                        data-childclass="namecheck">
-                    <span class="gcl-namecheck">Alice</span>
-                    <span class="gcl-namecheck">Bob</span>
-                  </span>
-                  <span class="gcl-new">
-                    (<span data-bind="gcl-numUnreadMessages">2</span>)
-                  </span>
-                  <span class="boxFlexStrong"></span>
-                  <span class="gcl-time">12 minutes ago</span>
-              </div>
-              <div class="hbox">
-                  <span class="gcl-msgPreviewSnippet">
-                    I don't know, that sounds pretty flammable.
-                  </span>
-              </div>
+          <span class="gcl-subject">
+            I want to buy some t-shirts for the team; any ideas on where to
+            find good ones?
+          </span>
+        </div>
+        <div class="gcl-msgPreview">
+          <div class="gcl-msgPreviewHeader">
+            <!-- names -->
+            <span class="gcl-participants"
+                  data-childclass="participant">
+              <span class="gcl-participant"><img class="gcl-part-pic PIC-alice" />Alice</span>
+              <span class="gcl-participant"><img class="gcl-part-pic PIC-bob" />Bob</span>
+            </span>
           </div>
+          <div class="gcl-msgPreviewBody">
+            <span class="gcl-msgPreviewSnippet">
+              I don't know, that sounds pretty flammable.
+            </span>
+          </div>
+        </div>
       </a>
 
       <!-- Conversation with new activity, tons of people  -->
-      <a class="gcl-conv" data-classimpl="convBlurb"
-         href="#groupConv">
-          <div>
-              <div class="gcl-avatar">
-                  <img class="gcl-pic" src="i/group.png" />
-              </div>
+      <a class="gcl-item" data-classimpl="convBlurb"
+         href="#groupConv" hasUnread="true">
+        <!-- This is an example of a subject which is just the first message
+             from the conversation. -->
+        <div class="gcl-header">
+          <div class="gcl-headerRight">
+            <span class="gcl-new">
+              (<span data-bind="gcl-numUnreadMessages">4</span>)
+            </span>
+            <span class="gcl-time">2 hours ago</span>
           </div>
-          <div class="gcl-msgPreview">
-              <div class="gcl-msgPreviewHeader">
-                  <!-- names -->
-                  <span class="gcl-namechecks">
-                    <span class="gcl-namecheck">Alice</span>
-                    <span class="gcl-namecheck">Bob</span>
-                    <span class="gcl-namecheck">Charlie</span>
-                    <span class="gcl-namecheck">the Dougster</span>
-                    <span class="gcl-namecheck">Eliza Dolittle</span>
-                    <span class="gcl-namecheck">Fred Q. Fredericks</span>
-                    <span class="gcl-namecheck">Georgette Q. Georgettington</span>
-                    <span class="gcl-namecheck">Hieronymus Q. Hierarchicalnamespace, MD, Ph.D, Sc.D</span>
-                    <span class="gcl-namecheck">John Jacob Jingleheimer Schmidt</span>
-                  </span>
-                  <span class="gcl-new">
-                    (<span data-bind="gcl-numUnreadMessages">4</span>)
-                  </span>
-                  <span class="boxFlexStrong"></span>
-                  <span class="gcl-time">2 hours ago</span>
-              </div>
-              <div class="hbox">
-                  <span class="gcl-msgPreviewSnippet">
-                    What do you get when you cross an elephant with a rhinocerous?
-                  </span>
-              </div>
+          <span class="gcl-subject">
+            Jokes!
+          </span>
+        </div>
+        <div class="gcl-msgPreview">
+          <div class="gcl-msgPreviewHeader">
+            <!-- names -->
+            <span class="gcl-participants">
+              <span class="gcl-participant"><img class="gcl-part-pic PIC-doug" />the Dougster</span>
+              <span class="gcl-participant"><img class="gcl-part-pic PIC-eliza" />Eliza Dolittle</span>
+              <span class="gcl-participant"><img class="gcl-part-pic PIC-fred" />Fred Q. Fredericks</span>
+              <span class="gcl-participant"><img class="gcl-part-pic PIC-georgette" />Georgette Q. Georgettington</span>
+              <span class="gcl-participant"><img class="gcl-part-pic PIC-hieronymus" />Hieronymus Q. Hierarchicalnamespace, MD, Ph.D, Sc.D</span>
+              <span class="gcl-participant"><img class="gcl-part-pic PIC-john" />John Jacob Jingleheimer Schmidt</span>
+            </span>
+            <span class="gcl-participants-overflow">
+              <img class="gcl-part-pic PIC-alice" /><img class="gcl-part-pic PIC-bob" /><img class="gcl-part-pic PIC-charlie" /> and 3 others.
+            </span>
           </div>
+          <div class="gcl-msgPreviewBody">
+            <span class="gcl-msgPreviewSnippet">
+              What do you get when you cross an elephant with a rhinocerous?
+            </span>
+          </div>
+        </div>
       </a>
 
       <!-- Conversation with new activity, huge unread message snippet -->
-      <a class="gcl-conv" data-classimpl="convBlurb"
+      <a class="gcl-item" data-classimpl="convBlurb"
          href="#groupConv">
-          <div>
-              <div class="gcl-avatar">
-                  <img class="gcl-pic" src="i/group.png" />
-              </div>
+        <div class="gcl-header">
+          <div class="gcl-headerRight">
+            <span class="gcl-new">
+              (<span data-bind="gcl-numUnreadMessages">0</span>)
+            </span>
+            <span class="gcl-time">5 hours ago</span>
           </div>
-          <div class="gcl-msgPreview">
-              <div class="gcl-msgPreviewHeader">
-                  <!-- names -->
-                  <span class="gcl-namechecks"
-                        data-childclass="namecheck">
-                    <span class="gcl-namecheck">Bob</span>
-                    <span class="gcl-namecheck">Charlie</span>
-                    <span class="gcl-namecheck">Dave</span>
-                  </span>
-                  <span class="gcl-new">
-                    (<span data-bind="gcl-numUnreadMessages">1</span>)
-                  </span>
-                  <span class="boxFlexStrong"></span>
-                  <span class="gcl-time">5 hours ago</span>
-              </div>
-              <div class="hbox">
-                  <span class="gcl-msgPreviewSnippet">
-                    Yes, I know my A, B, C's.  They are, in no particular order.
-                    Er, or rather, in a quite particular order: A, B, C, D, E,
-                    F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X, Y,
-                    and Zed.  I mean Z.  Yes, Z.  I am not a British spy.
-                    And you'll never prove it, governa.  Damn!
-                  </span>
-              </div>
+          <span class="gcl-subject">
+            Wassssssssup?
+          </span>
+        </div>
+        <div class="gcl-msgPreview">
+          <div class="gcl-msgPreviewHeader">
+            <!-- names -->
+            <span class="gcl-participants"
+                  data-childclass="participant">
+              <span class="gcl-participant"><img class="gcl-part-pic PIC-bob" />Bob</span>
+              <span class="gcl-participant"><img class="gcl-part-pic PIC-charlie" />Charlie</span>
+              <span class="gcl-participant"><img class="gcl-part-pic PIC-doug" />the Dougster</span>
+            </span>
           </div>
+          <div class="gcl-msgPreviewBody">
+            <span class="gcl-msgPreviewSnippet">
+              Yes, I know my A, B, C's.  They are, in no particular order.
+              Er, or rather, in a quite particular order: A, B, C, D, E,
+              F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X, Y,
+              and Zed.  I mean Z.  Yes, Z.  I am not a British spy.
+              And you'll never prove it, governa.  Damn!
+            </span>
+          </div>
+        </div>
       </a>
 
 
@@ -1206,7 +1205,7 @@
         <div>
           <div class="crl-details">
             <span class="crl-receivedAt" data-bind="receivedAt">2 weeks ago</span>: 
-            <span class="crl-messageText" data-bind="messageText">The rain in Spain stays mainly in the plane.</span>
+            <span class="crl-messageText" data-bind="messageText">The rain in Spain stays mainly in the plane.  But sometimes this compromises the flightworthiness of the plane and then it crashes.  Which is why I recommend not visiting Spain.</span>
           </div>
         </div>
       </a>
